--- a/CodeFirstApproachDemo/appsettings.json
+++ b/CodeFirstApproachDemo/appsettings.json
@@ -6,7 +6,18 @@
     }
   },
   "AllowedHosts": "*",
+  //"Cors": {
+  //  "AllowedOrigins": [
+  //    "http://localhost:5199",
+  //    "http://localhost:5129",
+  //    "http://localhost:5179"
+
+  //  ],"AllowCredentials": true
+
+  //},
+
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=mazenet-test;Database=SchoolDB;Integrated Security=true;Trust Server Certificate=true"
   }
+
 }
